k8s/ack/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stablepay-ingress
  namespace: stablepay-dev
  annotations:
    alb.ingress.kubernetes.io/albconfig.name: "alb"
    alb.ingress.kubernetes.io/backend-protocol: "HTTP"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80},{"HTTPS": 443}]'

    alb.ingress.kubernetes.io/healthcheck-enabled: "true"
    alb.ingress.kubernetes.io/healthcheck-path: "/health"
    alb.ingress.kubernetes.io/healthcheck-protocol: "HTTP"
    alb.ingress.kubernetes.io/cors-allow-origin: "*"
    alb.ingress.kubernetes.io/cors-allow-methods: "GET,POST,PUT,DELETE,OPTIONS"
spec:
  ingressClassName: alb
  rules:
    - host: ai.wenfu.cn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stablepay-api-gateway
                port:
                  number: 8080
